aligning fix

--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -12,11 +12,11 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-
+    
     @media (min-width: 765px) {
       flex-direction: row;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-start;
       text-align: left;
       /* padding: 40px 0; */
     }
